--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
     </nav>
     <section id="profile">
         <div class="section__pic-container">
-            <img src="./assets/Pink White Simple Geometric Circle Profile Photo Instagram Post.png" alt="Savyo Alsabbagh profile picture">
+            <img src="./assets/Screenshot 2024-07-27 at 5.59.10 PM.png">
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
             <h1 class="title">Savyo Al-Sabbagh</h1>
-            <p class="section__text__p2">UOA Business School Student</p>
+            <p class="section__text__p2"> Business School Student</p>
             <div class="btn-container">
                 <button 
                 class="btn btn-color-2" onclick="window.open('./assets/Savyo')">
@@ -61,22 +61,150 @@
     </section>
     <section id="about">
         <p class="section__text__p1">Get To Know More</p>
-        <p class="title">About Me</h1>
+        <h1 class="title">About Me</h1>
             <div class="section-container">
                 <div class="section__pic-container">
-                    <img src="./assets/about pic.png" alt="Profile picture" class="about-pic"
+                    <img src="./assets/Screenshot 2024-07-27 at 6.15.26 PM.png" alt="Profile Picture" class="about-pic"
                     />
                 </div>
                 <div class="about-details-container">
                     <div class="about-containers">
                         <div class="details-container">
-                            <img src="./assets/experience.png" alt="experience incon" class="icone"
+                            <img src="./assets/education.png" alt="eduction icon" class="icon"
                             />
+                            <h3>Education</h3>
+                            <p>Bachelors of Commerce<br />Information Systems & Business Analytics</p>
                         </div>
+                    </div>
+                    <div class="text-container">
+                        <p>As a dedicated Bachelor of Commerce student majoring in Information Systems and Business Analytics at the University of Auckland, I bring a unique blend of analytical prowess and technological expertise to the table. My commitment to leveraging data for strategic decision-making is complemented by a deep passion for sustainability and innovation</p>
                     </div>
                 </div>
             </div>
+            <img src="./assets/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#experience'"
+            />
     </section>
-    <script src="script.js"></script>
-</body>
-</html>
+    <section id="experience">
+        <p class="section__text__p1">Explore My</p>
+        <h1 class="title">Experience</h1>
+        <div class="experience-details-container">
+            <div class="about-containers">
+                <div class="details-container">
+                    <div>
+                        <h2 class="experience-sub-title">Retail Sales Assistant</h2>
+                    <div class="article-container">
+                        <article>
+                            <img
+                            src="./assets/checkmark.png"
+                            alt="Experience icon"
+                            class="icon"
+                          >
+                          <div>
+                            <h3>Sales</h3>
+                            <p>Experienced</p>
+                          </div>
+                        </article>
+                        <article>
+                          <img
+                            src="./assets/checkmark.png"
+                            alt="Experience icon"
+                            class="icon"
+                          />
+                          <div>
+                            <h3>Inventory Management</h3>
+                            <p>Experienced</p>
+                          </div>
+                        </article>
+                        <article>
+                          <img
+                            src="./assets/checkmark.png"
+                            alt="Experience icon"
+                            class="icon"
+                          />
+                          <div>
+                            <h3>Point of Sale (POS) Systems</h3>
+                            <p>Intermediate</p>
+                          </div>
+                        </article>
+                        <article>
+                          <img
+                            src="./assets/checkmark.png"
+                            alt="Experience icon"
+                            class="icon"
+                          />
+                          <div>
+                            <h3>Customer Service</h3>
+                            <p>Experienced</p>
+                          </div>
+                        </article>
+                        <article>
+                          <img
+                            src="./assets/checkmark.png"
+                            alt="Experience icon"
+                            class="icon"
+                          />
+                        <div>
+                    </div>
+                    <div>
+                        <div class="details-container">
+                            <h2 class="experience-sub-title">Personal Learning</h2>
+                            <div class="article-container">
+                              <article>
+                                <img
+                                  src="./assets/checkmark.png"
+                                  alt="Experience icon"
+                                  class="icon"
+                                />
+                                <div>
+                                  <h3>SAP Build Apps</h3>
+                                  <p>Intermediate</p>
+                                </div>
+                              </article>
+                              <article>
+                                <img
+                                  src="./assets/checkmark.png"
+                                  alt="Experience icon"
+                                  class="icon"
+                                />
+                                <div>
+                                  <h3>JavaScript</h3>
+                                  <p>Basic</p>
+                                </div>
+                              </article>
+                              <article>
+                                <img
+                                  src="./assets/checkmark.png"
+                                  alt="Experience icon"
+                                  class="icon"
+                                />
+                                <div>
+                                  <h3>Python</h3>
+                                  <p>Basic</p>
+                                </div>
+                              </article>
+                              <article>
+                                <img
+                                  src="./assets/checkmark.png"
+                                  alt="Experience icon"
+                                  class="icon"
+                                />
+                                <div>
+                                  <h3>Figma</h3>
+                                  <p>Basic</p>
+                                </div>
+                              </article>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <img
+                        src="./assets/arrow.png"
+                        alt="Arrow icon"
+                        class="icon arrow"
+                        onclick="location.href='./#projects'"
+                      />
+                    </div>
+              </section>
+            <script src="script.js"></script>
+        </body>
+        </html>
