--- a/index.html
+++ b/index.html
@@ -88,17 +88,18 @@
         <p class="section__text__p1">Explore My</p>
         <h1 class="title">Experience</h1>
         <div class="experience-details-container">
-            <div class="about-containers">
-                <div class="details-container">
-                    <div>
-                        <h2 class="experience-sub-title">Retail Sales Assistant</h2>
-                    <div class="article-container">
+              <div class="about-container">
+
+                    <div class="details-container">
+
+                      <h2 class="experience-sub-title">Retail Sales Assistant</h2>
+                      <div class="article-container">
                         <article>
                             <img
                             src="./assets/checkmark.png"
                             alt="Experience icon"
-                            class="icon"
-                          >
+                            class="icon">
+
                           <div>
                             <h3>Sales</h3>
                             <p>Experienced</p>
@@ -137,65 +138,66 @@
                             <p>Experienced</p>
                           </div>
                         </article>
-                        <article>
-                          <img
-                            src="./assets/checkmark.png"
-                            alt="Experience icon"
-                            class="icon"
-                          />
-                        <div>
+                      </div>
+
                     </div>
-                    <div>
-                        <div class="details-container">
-                            <h2 class="experience-sub-title">Personal Learning</h2>
-                            <div class="article-container">
-                              <article>
-                                <img
-                                  src="./assets/checkmark.png"
-                                  alt="Experience icon"
-                                  class="icon"
-                                />
-                                <div>
-                                  <h3>SAP Build Apps</h3>
-                                  <p>Intermediate</p>
-                                </div>
-                              </article>
-                              <article>
-                                <img
-                                  src="./assets/checkmark.png"
-                                  alt="Experience icon"
-                                  class="icon"
-                                />
-                                <div>
-                                  <h3>JavaScript</h3>
-                                  <p>Basic</p>
-                                </div>
-                              </article>
-                              <article>
-                                <img
-                                  src="./assets/checkmark.png"
-                                  alt="Experience icon"
-                                  class="icon"
-                                />
-                                <div>
-                                  <h3>Python</h3>
-                                  <p>Basic</p>
-                                </div>
-                              </article>
-                              <article>
-                                <img
-                                  src="./assets/checkmark.png"
-                                  alt="Experience icon"
-                                  class="icon"
-                                />
-                                <div>
-                                  <h3>Figma</h3>
-                                  <p>Basic</p>
-                                </div>
-                              </article>
+
+                    <div class="details-container">
+
+                        <h2 class="experience-sub-title">Personal Learning</h2>
+                        <div class="article-container">
+                          <article>
+                            <img
+                              src="./assets/checkmark.png"
+                              alt="Experience icon"
+                              class="icon"
+                            />
+                            <div>
+                              <h3>SAP Build Apps</h3>
+                              <p>Intermediate</p>
                             </div>
-                          </div>
+                          </article>
+                          <article>
+                            <img
+                              src="./assets/checkmark.png"
+                              alt="Experience icon"
+                              class="icon"
+                            />
+                            <div>
+                              <h3>JavaScript</h3>
+                              <p>Basic</p>
+                            </div>
+                          </article>
+                          <article>
+                            <img
+                              src="./assets/checkmark.png"
+                              alt="Experience icon"
+                              class="icon"
+                            />
+                            <div>
+                              <h3>Python</h3>
+                              <p>Basic</p>
+                            </div>
+                          </article>
+                          <article>
+                            <img
+                              src="./assets/checkmark.png"
+                              alt="Experience icon"
+                              class="icon"
+                            />
+                            <div>
+                              <h3>Figma</h3>
+                              <p>Basic</p>
+                            </div>
+                          </article>
                         </div>
+                    </div>
+              </div>
+        </div>
+                    <!-- <div> -->
+
+                  <div>
+
                       </div>
                       <img
                         src="./assets/arrow.png"
@@ -203,8 +205,32 @@
                         class="icon arrow"
                         onclick="location.href='./#projects'"
                       />
+                  </div>
+              </section>
+              <section id="projects">
+                <p class="section__text__p1">Browse My Recent</p>
+                <h1 class="title">Projects</h1>
+                <div class="experience-details-container">
+                    <div class="details-container color-container">
+                        <div class="article-container">
+                            <img src="./assets/project-11.png" alt="Project 1" class="project-img"
+                            />
+                        </div>
+                        <h2 class="experience-sub-title project-title">Project one</h2>
+                        <div class="btn-container">
+                          <button 
+                          class="btn btn-color-2 project-btn" onclick="location.href'https://www.youtube.com/watch?v=ldwlOzRvYOU'">
+                          Figma Prototype
+                          </button>
+                          <button 
+                          class="btn btn-color-2 project-btn" onclick="location.href'https://www.youtube.com/watch?v=ldwlOzRvYOU'">
+                          Problem
+                          </button>
+                        </div>
                     </div>
+                </div>
               </section>
             <script src="script.js"></script>
         </body>
         </html>
+                            
