--- a/index.html
+++ b/index.html
@@ -211,9 +211,10 @@
                 <p class="section__text__p1">Browse My Recent</p>
                 <h1 class="title">Projects</h1>
                 <div class="experience-details-container">
+                  <div class="about-containers">
                     <div class="details-container color-container">
                         <div class="article-container">
-                            <img src="./assets/project-11.png" alt="Project 1" class="project-img"
+                            <img src="./assets/dahhfha.png" alt="Project 1" class="project-img"
                             />
                         </div>
                         <h2 class="experience-sub-title project-title">Project one</h2>
@@ -228,8 +229,63 @@
                           </button>
                         </div>
                     </div>
+                    <div class="details-container color-container">
+                        <div class="article-container">
+                            <img src="./assets/Blue Modern Digital Get In Touch Mobile Instagram Post.png" alt="Project 1" class="project-img"
+                            />
+                        </div>
+                        <h2 class="experience-sub-title project-title">Project Two</h2>
+                        <div class="btn-container">
+                          <button 
+                          class="btn btn-color-2 project-btn" onclick="location.href'https://www.youtube.com/watch?v=ldwlOzRvYOU'">
+                          Figma Prototype
+                          </button>
+                          <button 
+                          class="btn btn-color-2 project-btn" onclick="location.href'https://www.youtube.com/watch?v=ldwlOzRvYOU'">
+                          Problem
+                          </button>
+                        </div>
+                    </div> 
+                  </div>
+                </div>
+                <img
+                        src="./assets/arrow.png"
+                        alt="Arrow icon"
+                        class="icon arrow"
+                        onclick="location.href='./#contact'"
+                      />
+              </section>
+              <section id="contact">
+                <p class="section__text__p1">Get in Touch</p>
+                <h1 class="title">Contact Me</h1>
+                <div class="contact-info-upper-container">
+                  <div class="contact-info-container">
+                    <img src="./assets/email.png" alt="Email icon" 
+                    class="icon contact-icon email-icon" 
+                    />
+                    <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+                  </div>
+                  <div class="contact-info-container">
+                    <img src="./assets/linkedin.png" alt="linkedin icon" 
+                    class="icon contact-icon" 
+                    />
+                    <p><a href="https://www.linkedin.com/in/savyo-alsabbagh/?original_referer=https%3A%2F%2Fwww%2Egoogle%2Ecom%2F&originalSubdomain=nz">Linkedin</a></p>
+                  </div>
                 </div>
               </section>
+              <footer>
+                <nav>
+                  <div class="nav-links-container">
+                    <ul class="nav-links">
+                      <li><a href="#about">About</a></li>
+                      <li><a href="#experience">Experience</a></li>
+                      <li><a href="#projects">Projects</a></li>
+                      <li><a href="#contact">Contact</a></li>
+                  </ul>
+                  </div>
+                </nav>
+                <p>Copyright &#169; 2024 Savyo Al-Sabbagh. All Rights Reserved.</p>
+              </footer>
             <script src="script.js"></script>
         </body>
         </html>
