--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p class="section__text__p2"> Business School Student</p>
             <div class="btn-container">
                 <button 
-                class="btn btn-color-2" onclick="window.open('./assets/Savyo')">
+                class="btn btn-color-2" onclick="window.open('./assets/savyoo.pdf')">
                 Download CV
                 </button>
                 <button 
@@ -263,7 +263,7 @@
                     <img src="./assets/email.png" alt="Email icon" 
                     class="icon contact-icon email-icon" 
                     />
-                    <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+                    <p><a href="mailto:examplemail@gmail.com">savyoalsabbagh10@gmail.com</a></p>
                   </div>
                   <div class="contact-info-container">
                     <img src="./assets/linkedin.png" alt="linkedin icon" 
