--- a/index.html
+++ b/index.html
@@ -220,11 +220,11 @@
                         <h2 class="experience-sub-title project-title">Project one</h2>
                         <div class="btn-container">
                           <button 
-                          class="btn btn-color-2 project-btn" onclick="location.href'https://www.youtube.com/watch?v=ldwlOzRvYOU'">
+                          class="btn btn-color-2 project-btn" onclick= "window.open('https://www.youtube.com/watch?v=ldwlOzRvYOU', '_blank')">
                           Figma Prototype
                           </button>
                           <button 
-                          class="btn btn-color-2 project-btn" onclick="location.href'https://www.youtube.com/watch?v=ldwlOzRvYOU'">
+                          class="btn btn-color-2 project-btn" onclick= "window.open('https://www.youtube.com/watch?v=ldwlOzRvYOU', '_blank')">
                           Problem
                           </button>
                         </div>
@@ -237,11 +237,11 @@
                         <h2 class="experience-sub-title project-title">Project Two</h2>
                         <div class="btn-container">
                           <button 
-                          class="btn btn-color-2 project-btn" onclick="location.href'https://www.youtube.com/watch?v=ldwlOzRvYOU'">
+                          class="btn btn-color-2 project-btn" onclick= "window.open('https://www.youtube.com/watch?v=ldwlOzRvYOU', '_blank')">
                           Figma Prototype
                           </button>
                           <button 
-                          class="btn btn-color-2 project-btn" onclick="location.href'https://www.youtube.com/watch?v=ldwlOzRvYOU'">
+                          class="btn btn-color-2 project-btn" onclick= "window.open('https://www.youtube.com/watch?v=ldwlOzRvYOU', '_blank')">
                           Problem
                           </button>
                         </div>
