--- a/index.html
+++ b/index.html
@@ -220,11 +220,11 @@
                         <h2 class="experience-sub-title project-title">Project one</h2>
                         <div class="btn-container">
                           <button 
-                          class="btn btn-color-2 project-btn" onclick= "window.open('https://www.youtube.com/watch?v=ldwlOzRvYOU', '_blank')">
+                          class="btn btn-color-2 project-btn" onclick= "window.open('https://www.figma.com/proto/Iuveh3ax75MQwPbmMXdFeS/MOBILE-APP-LOGIN-PAGE-(Community)?node-id=1-8&t=Ixg96z2o3jrDIFBj-1&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A8&show-proto-sidebar=1', '_blank')">
                           Figma Prototype
                           </button>
                           <button 
-                          class="btn btn-color-2 project-btn" onclick= "window.open('https://www.youtube.com/watch?v=ldwlOzRvYOU', '_blank')">
+                          class="btn btn-color-2 project-btn" onclick= "window.open('https://docs.google.com/document/d/1A4Bzo0eztyFb01H2oDpedqHKQNOW_P0O0kn3Lu--sRk/edit?usp=sharing', '_blank')">
                           Problem
                           </button>
                         </div>
