--- a/index.html
+++ b/index.html
@@ -237,11 +237,11 @@
                         <h2 class="experience-sub-title project-title">Project Two</h2>
                         <div class="btn-container">
                           <button 
-                          class="btn btn-color-2 project-btn" onclick= "window.open('https://www.youtube.com/watch?v=ldwlOzRvYOU', '_blank')">
+                          class="btn btn-color-2 project-btn" onclick= "window.open('https://www.figma.com/proto/gPynZO6q3tMsAJ6d46lDcm/Allegiant-Login-%2F-Signup-App-Page-Template-(Community)?node-id=0-1&t=5PYvIRjuVR7KdYsj-1', '_blank')">
                           Figma Prototype
                           </button>
                           <button 
-                          class="btn btn-color-2 project-btn" onclick= "window.open('https://www.youtube.com/watch?v=ldwlOzRvYOU', '_blank')">
+                          class="btn btn-color-2 project-btn" onclick= "window.open('https://docs.google.com/document/d/16T40G3wdiZCc7_TikOdrb0xsepW90JWHosMmzrpiJ7w/edit?usp=sharing', '_blank')">
                           Problem
                           </button>
                         </div>
